--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
-  "name": "weixin-js-sdk",
-  "version": "1.0.7",
+  "name": "we-jssdk",
+  "version": "1.0.0",
   "main": "index.js",
+  "keywords": [
+    "wechat",
+    "wexin",
+    "jssdk",
+    "wechat-jssdk",
+    "wexin-jssdk"
+  ],
   "description": "微信官方 js-sdk CommonJS 版",
   "repository": {
     "type": "git",
-    "url": "https://github.com/yanxi-com/weixin-js-sdk.git"
+    "url": "https://github.com/airyland/we-jssdk.git"
   }
 }
